--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "style-loader": "^0.18.2",
     "tachyons": "^4.8.1",
     "tachyons-svg": "^1.0.1",
+    "ui-tachyons-dark": "github:ocd-sg/ui-tachyons-dark",
     "webpack": "^3.6.0",
     "webpack-dashboard": "^1.0.0-7",
     "webpack-dev-server": "^2.8.2"
