--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "dependencies": {
     "d3": "^4.10.2",
-    "mapbox-gl": "^0.40.1"
+    "mapbox-gl": "^0.40.1",
+    "react-autocomplete": "^1.7.2"
   }
 }
