--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ui-react-core",
   "version": "0.1.0",
   "description": "UI Components",
-  "main": "index.js",
+  "main": "dist/lib.min.js",
   "scripts": {
     "build:lib": "NODE_ENV=production webpack --config webpack.config.build-lib.babel.js",
     "build:app": "npm run build:app:webpack && npm run build:app:data",
@@ -16,8 +16,8 @@
   "author": "Yin Shanyang <me@yinshanyang.com> (http://yinshanyang.com)",
   "license": "ISC",
   "devDependencies": {
-    "@storybook/react": "^3.2.12",
-    "ava": "^0.22.0",
+    "@storybook/react": "^3.2.13",
+    "ava": "^0.23.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
@@ -28,38 +28,38 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
     "css-loader": "^0.28.7",
-    "enzyme": "^3.0.0",
-    "eslint": "^4.7.2",
+    "enzyme": "^3.1.0",
+    "eslint": "^4.10.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-config-standard-react": "^5.0.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-flowtype": "^2.36.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-flowtype": "^2.39.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.4.0",
     "eslint-plugin-standard": "^3.0.1",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "flow-bin": "^0.55.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "flow-bin": "^0.57.3",
     "html-webpack-plugin": "^2.30.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-hot-loader": "^3.0.0-beta.7",
-    "sinon": "^4.0.0",
-    "style-loader": "^0.18.2",
+    "react-hot-loader": "^3.1.1",
+    "sinon": "^4.0.2",
+    "style-loader": "^0.19.0",
     "ui-tachyons-dark": "github:ocd-sg/ui-tachyons-dark",
-    "webpack": "^3.6.0",
-    "webpack-dashboard": "^1.0.0-7",
-    "webpack-dev-server": "^2.8.2"
+    "webpack": "^3.8.1",
+    "webpack-dashboard": "^1.0.0",
+    "webpack-dev-server": "^2.9.3"
   },
   "peerDependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
   "dependencies": {
-    "d3": "^4.10.2",
-    "mapbox-gl": "^0.40.1",
+    "d3": "^4.11.0",
+    "mapbox-gl": "^0.41.0",
     "react-autocomplete": "^1.7.2"
   }
 }
