--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   },
   "dependencies": {
     "d3": "^4.11.0",
-    "mapbox-gl": "^0.41.0",
-    "react-autocomplete": "^1.7.2"
+    "fuzzysearch": "^1.0.3",
+    "mapbox-gl": "^0.41.0"
   }
 }
