--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   },
   "dependencies": {
     "d3": "^4.11.0",
-    "fuzzysearch": "^1.0.3",
+    "fuzzysort": "^1.0.2",
     "mapbox-gl": "^0.41.0"
   }
 }
