--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "react-hot-loader": "^3.1.1",
     "sinon": "^4.0.2",
     "style-loader": "^0.19.0",
-    "ui-tachyons-dark": "https://github.com/ocd-sg/ui-tachyons-dark",
+    "ui-tachyons-dark": "git+https://github.com/ocd-sg/ui-tachyons-dark.git",
     "webpack": "^3.8.1",
     "webpack-dashboard": "^1.0.0",
     "webpack-dev-server": "^2.9.3"
