--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "@storybook/react": "^3.2.13",
+    "@turf/turf": "^5.1.6",
     "ava": "^0.23.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
@@ -49,6 +50,7 @@
     "sinon": "^4.0.2",
     "style-loader": "^0.19.0",
     "ui-tachyons-dark": "git+https://github.com/ocd-sg/ui-tachyons-dark.git",
+    "ui-tachyons-light": "github:ocd-sg/ui-tachyons-light",
     "webpack": "^3.8.1",
     "webpack-dashboard": "^1.0.0",
     "webpack-dev-server": "^2.9.3"
